fibonacci/k8s/fibonacci-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    # last-applied-configuration annotation serves as a record for a Kubernetes resource's last configuration which was applied to the cluser. In this case resource is fibonacci namespace.
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Namespace","metadata":{"annotations":{},"name":"fibonacci"}}
  name: fibonacci
